1er partie - mise en place des éléments

--- a/src/index.html
+++ b/src/index.html
@@ -9,31 +9,268 @@
   <body>
     <header>
       <div class="container">
-        <div class="row">
+        <div class="row arriere-plan">
           <div class="col-12">progression fusée</div>
-          <div class="col-6">casterman</div>
+          <div class="col-6">
+            <img class="logo" src="img/logo-casterman.jpg" alt="" />
+          </div>
           <div class="col-6">ACHETER LA BD</div>
           <div class="col-12">SURVOLEZ LA MISSION</div>
         </div>
       </div>
     </header>
+
     <br />
+
     <main>
       <div class="container">
         <div class="row">
-          <div class="col-12">colonne 1</div>
-          <div class="col-6">colonne 2</div>
-          <div class="col-6">colonne 2</div>
+          <div class="col-12">
+            image bd
+            <img class="images-BD" src="img/images-BD-1.png" alt="" />
+            <img class="images-BD" src="img/images-BD-2.png" alt="" />
+            <img class="images-BD" src="img/images-BD-3.png" alt="" />
+            <img class="images-BD" src="img/images-BD-4.png" alt="" />
+            <img class="images-BD" src="img/images-BD-5.png" alt="" />
+            <img class="images-BD" src="img/images-BD-6.png" alt="" />
+            <img class="images-BD" src="img/images-BD-7.png" alt="" />
+            <img class="images-BD" src="img/images-BD-8.png" alt="" />
+            <img class="images-BD" src="img/images-BD-9.png" alt="" />
+            <img class="images-BD" src="img/images-BD-10.png" alt="" />
+            <img class="images-BD" src="img/images-BD-11.png" alt="" />
+          </div>
+        </div>
+      </div>
+
+      <br />
+
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            texte de vente
+            <h2>TINTIN OBJECTIF LUNE</h2>
+            <br />
+            <p>
+              SYNOPSIS <br />
+              <br />
+              «Objectif Lune» est l’un des livres d’Aventures de Tintin, écrit
+              par Hergé, publié en 1953. Il fait partie d’un diptyque avec le
+              livre suivant, «On a marché sur la Lune».
+              <br />
+              <br />
+              Dans «Objectif Lune», Tintin, le capitaine Haddock et le
+              professeur Tournesol se rendent en Syldavie, un petit pays fictif,
+              où Tournesol est chargé d’un projet scientifique de grande taille
+              : la construction d’une fusée pour aller sur la Lune. Tournesol,
+              un inventeur de génie, mais distrait, travaille avec une équipe
+              d’experts dans un centre de recherche secret.
+              <br />
+              <br />
+              La mission consiste à préparer l’envoi d’une équipe d’astronautes
+              sur la Lune, une première dans l’histoire de l’humanité. Tintin et
+              Haddock sont invités à assister à cette aventure scientifique,
+              mais rapidement, ils se rendent compte que tout ne se passe pas
+              comme prévu.
+            </p>
+            <br />
+            <p>
+              <strong
+                >Nbr. de pages: 408 <br />
+                Ed. Casterman, 2006 (intégrale) <br />
+                ISBN - 13:9782203114791</strong
+              >
+            </p>
+          </div>
+          <div class="col-6">
+            livre
+            <img
+              class="livre-de-vente"
+              src="img/Book Perspective Mockup 4.png"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+
+      <br />
+
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            commentaire
+            <div>
+              <img src="#" alt="étoile de notation." />
+              <img src="#" alt="icone profil." />
+              <p>nom du profil</p>
+              <p>texte du commentaire</p>
+            </div>
+
+            <div>
+              <img src="#" alt="étoile de notation." />
+              <img src="#" alt="icone profil." />
+              <p>nom du profil</p>
+              <p>texte du commentaire</p>
+            </div>
+
+            <div>
+              <img src="#" alt="étoile de notation." />
+              <img src="#" alt="icone profil." />
+              <p>nom du profil</p>
+              <p>texte du commentaire</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <br />
+
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            video du livre
+            <video src="#"></video>
+          </div>
+        </div>
+      </div>
+
+      <br />
+
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="editions">
+              éditions de tintin
+              <img class="livres" src="img/l-affaire-tournesol-fr.jpg" alt="" />
+              <img class="livres" src="img/vol-714-pour-sydney-fr.jpg" alt="" />
+              <img
+                class="livres"
+                src="img/tintin-et-les-picaros-fr.jpg"
+                alt=""
+              />
+              <img
+                class="livres"
+                src="img/tintin-et-l-alph-art-fr.jpg"
+                alt=""
+              />
+              <img
+                class="livres"
+                src="img/tintin-au-tibet-cover-fr.jpg"
+                alt=""
+              />
+              <img
+                class="livres"
+                src="img/tintin-au-pays-des-soviets-fr_v2.jpg"
+                alt=""
+              />
+              <img
+                class="livres"
+                src="img/tintin-au-pays-de-l-or-noir-fr.jpg"
+                alt=""
+              />
+              <img
+                class="livres"
+                src="img/on-a-marche-sur-la-lune.jpg"
+                alt=""
+              />
+              <img class="livres" src="img/les-cigares-du-pharaon.png" alt="" />
+              <img
+                class="livres"
+                src="img/les-bijoux-de-la-castafiore-fr.jpg"
+                alt=""
+              />
+              <img
+                class="livres"
+                src="img/les-7-boules-de-cristal-fr.jpg"
+                alt=""
+              />
+              <img
+                class="livres"
+                src="img/le-tresor-de-rackham-le-rouge-fr.jpg"
+                alt=""
+              />
+              <img class="livres" src="img/le-temple-du-soleil-fr.jpg" alt="" />
+              <img
+                class="livres"
+                src="img/le-secret-de-la-licorne-fr.jpg"
+                alt=""
+              />
+              <img
+                class="livres"
+                src="img/le-sceptre-d-ottokar-fr.jpg"
+                alt=""
+              />
+              <img class="livres" src="img/le-lotus-bleu-fr.jpg" alt="" />
+              <img
+                class="livres"
+                src="img/le-crabe-aux-pinces-d-or-fr.jpg"
+                alt=""
+              />
+              <img class="livres" src="img/l-oreile-cassee-fr.jpg" alt="" />
+              <img class="livres" src="img/l-ile-noire-fr.jpg" alt="" />
+              <img
+                class="livres"
+                src="img/l-etoile-mysterieuse-fr.jpg"
+                alt=""
+              />
+              <img class="livres" src="img/l-affaire-tournesol-fr.jpg" alt="" />
+              <img class="livres" src="img/l-affaire-tournesol-fr.jpg" alt="" />
+              <img class="livres" src="img/l-affaire-tournesol-fr.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <br />
+
+      <div class="container">
+        <div class="row">
+          <div class="col-12">bouton retour en haut</div>
         </div>
       </div>
     </main>
+
     <br />
+
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-3">casterman</div>
-          <div class="col-6">newsletter</div>
-          <div class="col-3">A Propos</div>
+          <div class="col-3">
+            <img class="logo" src="img/logo-casterman.jpg" alt="" />
+            <div class="réseaux-sociaux">
+              <img
+                class="réseaux-sociaux"
+                src="img/icone-facebook.jpg"
+                alt="icone-facebook"
+              />
+              <img
+                class="réseaux-sociaux"
+                src="img/icone-youtube.jpg"
+                alt="icone-youtube"
+              />
+              <img
+                class="réseaux-sociaux"
+                src="img/icone-instagram.jpg"
+                alt="icone-instagram"
+              />
+            </div>
+          </div>
+          <div class="col-6">
+            newsletter
+            <h3>S’abonner à la newsletter</h3>
+            <p>Restez informés des sorties de Casterman</p>
+          </div>
+          <div class="col-3">
+            <h3>A propos</h3>
+            <li>
+              <a href="#">Nôtre histoire</a>
+            </li>
+            <li>
+              <a href="#">Nos éditions</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+          </div>
         </div>
       </div>
       <hr />
