2eme partie fini

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <title>eikon parcel starter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="scss/main.scss" />
+    <link rel="stylesheet" href="https://use.typekit.net/tec3jxv.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/tec3jxv.css" />
   </head>
   <body>
     <header>
@@ -14,8 +16,12 @@
           <div class="col-6">
             <img class="logo" src="img/logo-casterman.jpg" alt="" />
           </div>
-          <div class="col-6">ACHETER LA BD</div>
-          <div class="col-12">SURVOLEZ LA MISSION</div>
+          <div class="col-6">
+            <a href="#" class="bouton">ACHETER LA BD</a>
+          </div>
+          <div class="col-12">
+            <a href="#" class="bouton"> SURVOLEZ LA MISSION </a>
+          </div>
         </div>
       </div>
     </header>
@@ -25,8 +31,7 @@
     <main>
       <div class="container">
         <div class="row">
-          <div class="col-12">
-            image bd
+          <div class="col-12 toute-les-images-BD">
             <img class="images-BD" src="img/images-BD-1.png" alt="" />
             <img class="images-BD" src="img/images-BD-2.png" alt="" />
             <img class="images-BD" src="img/images-BD-3.png" alt="" />
@@ -47,8 +52,7 @@
       <div class="container">
         <div class="row">
           <div class="col-6">
-            texte de vente
-            <h2>TINTIN OBJECTIF LUNE</h2>
+            <h1>TINTIN OBJECTIF LUNE</h1>
             <br />
             <p>
               SYNOPSIS <br />
@@ -80,9 +84,10 @@
                 ISBN - 13:9782203114791</strong
               >
             </p>
+            <a href="#" class="bouton">ACHETER LA BD</a>
           </div>
+
           <div class="col-6">
-            livre
             <img
               class="livre-de-vente"
               src="img/Book Perspective Mockup 4.png"
@@ -97,26 +102,123 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            commentaire
-            <div>
-              <img src="#" alt="étoile de notation." />
-              <img src="#" alt="icone profil." />
-              <p>nom du profil</p>
-              <p>texte du commentaire</p>
-            </div>
+            <div class="block-commentaire">
+              <div class="box">
+                <div class="commentaire">
+                  <div class="header">
+                    <div class="etoiles">
+                      ★★★★★
+                      <!-- Notation par étoiles -->
+                    </div>
+                    <div class="profil">
+                      <img src="img/user-icon.jpg" alt="Profil" class="icon" />
+                      <!-- Icône de profil -->
+                      <span class="nom">Danielo</span>
+                      <!-- Nom de la personne -->
+                    </div>
+                  </div>
+                  <div class="texte">
+                    « Mon premier Tintin et une superbe découverte ! Cette
+                    aventure lunaire, pleine d’humour et de rebondissements,
+                    donne envie de lire la suite. »​
+                  </div>
+                </div>
 
-            <div>
-              <img src="#" alt="étoile de notation." />
-              <img src="#" alt="icone profil." />
-              <p>nom du profil</p>
-              <p>texte du commentaire</p>
-            </div>
+                <div class="commentaire">
+                  <div class="header">
+                    <div class="etoiles">
+                      ★★★★☆
+                      <!-- Notation par étoiles -->
+                    </div>
+                    <div class="profil">
+                      <img src="img/user-icon.jpg" alt="Profil" class="icon" />
+                      <!-- Icône de profil -->
+                      <span class="nom">Windigo</span>
+                      <!-- Nom de la personne -->
+                    </div>
+                  </div>
+                  <div class="texte">
+                    « Objectif Lune marque un tournant, avec un développement
+                    visuel abouti et des scènes mémorables. Le soin apporté à
+                    chaque case rend cette BD incontournable. »​
+                  </div>
+                </div>
 
-            <div>
-              <img src="#" alt="étoile de notation." />
-              <img src="#" alt="icone profil." />
-              <p>nom du profil</p>
-              <p>texte du commentaire</p>
+                <div class="commentaire">
+                  <div class="header">
+                    <div class="etoiles">
+                      ★★★★★
+                      <!-- Notation par étoiles -->
+                    </div>
+                    <div class="profil">
+                      <img src="img/user-icon.jpg" alt="Profil" class="icon" />
+                      <!-- Icône de profil -->
+                      <span class="nom">Martine</span>
+                      <!-- Nom de la personne -->
+                    </div>
+                  </div>
+                  <div class="texte">
+                    « Hergé réussit à transformer un projet scientifique en un
+                    récit passionnant. Le personnage de Tournesol incarne
+                    l’esprit d’inventivité, rendant l’album visionnaire à bien
+                    des égards. »
+                  </div>
+                </div>
+
+                <div class="commentaire">
+                  <div class="header">
+                    <div class="etoiles">
+                      ★★★★★
+                      <!-- Notation par étoiles -->
+                    </div>
+                    <div class="profil">
+                      <img src="img/user-icon.jpg" alt="Profil" class="icon" />
+                      <!-- Icône de profil -->
+                      <span class="nom">Marie Curie</span>
+                      <!-- Nom de la personne -->
+                    </div>
+                  </div>
+                  <div class="texte">
+                    Très satisfait de mon achat, la qualité est au rendez-vous !
+                  </div>
+                </div>
+
+                <div class="commentaire">
+                  <div class="header">
+                    <div class="etoiles">
+                      ★★★★★
+                      <!-- Notation par étoiles -->
+                    </div>
+                    <div class="profil">
+                      <img src="img/user-icon.jpg" alt="Profil" class="icon" />
+                      <!-- Icône de profil -->
+                      <span class="nom">Marie Curie</span>
+                      <!-- Nom de la personne -->
+                    </div>
+                  </div>
+                  <div class="texte">
+                    Très satisfait de mon achat, la qualité est au rendez-vous !
+                  </div>
+                </div>
+
+                <div class="commentaire">
+                  <div class="header">
+                    <div class="etoiles">
+                      ★★★☆☆
+                      <!-- Notation par étoiles -->
+                    </div>
+                    <div class="profil">
+                      <img src="img/user-icon.jpg" alt="Profil" class="icon" />
+                      <!-- Icône de profil -->
+                      <span class="nom">Albert Einstein</span>
+                      <!-- Nom de la personne -->
+                    </div>
+                  </div>
+                  <div class="texte">
+                    Le produit est bon, mais il pourrait être amélioré.
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -255,7 +357,6 @@
             </div>
           </div>
           <div class="col-6">
-            newsletter
             <h3>S’abonner à la newsletter</h3>
             <p>Restez informés des sorties de Casterman</p>
           </div>
@@ -273,15 +374,16 @@
           </div>
         </div>
       </div>
-      <hr />
 
       <div class="container">
         <div class="row">
+          <hr />
+
           <div class="col-6">
             <p>© copyright 2024 - Tous droits réservés</p>
           </div>
           <div class="col-6">
-            <a href="#"
+            <a class="lois" href="#"
               >Conditions générales • Politique de confidentialité •
               Impressum</a
             >
